# ese200

./: .gitignore  README.md  dynamical_systems.ipynb  pyproject.toml
data/: inputs.npy  states.npy  track.npz
ese200/: config.py  expert.py  fit_model.py  racetrack.py  results.py  simulator.py  track.py  trajectories.py  visualize.py
ese2000_dynamical/: config.py  expert.py  simulator.py
notebooks/: linear_systems.ipynb
