[tool.poetry]
name = "ese2000-dynamical"
version = "0.2.0"
description = "Dynamical Systems Lab for ESE2000"
authors = ["Damian Owerko <Damowerko@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
numpy = "^1.24.2"
scipy = "^1.10.1"
torch = "^2.0.0"
cvxpy = "^1.3.1"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
pyyaml = "^6.0"
ipywidgets = "^8.0.6"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"